Fixed one string.

--- a/po/fr.po
+++ b/po/fr.po
@@ -601,7 +601,7 @@ msgstr "Pour d'autres résolutions, éditer le fichier :"
 
 #: src/stel_ui_conf.cpp:345
 msgid " Choose landscapes :"
-msgstr "  Choix du paysage :"
+msgstr " Choix du paysage :"
 
 #: src/stel_ui_conf.cpp:362
 msgid "Please save option in tab \"Location\""
@@ -621,7 +621,7 @@ msgstr "Position"
 
 #: src/stel_ui_conf.cpp:373
 msgid "Landscapes"
-msgstr "Paysages : "
+msgstr "Paysages"
 
 #: src/stel_ui_conf.cpp:374
 msgid "Video"
