Added missing accented characters to courrier font. Fixed install bug because of non-portable wildcards in Makefiles.am

--- a/data/stellarium.1
+++ b/data/stellarium.1
@@ -16,7 +16,7 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-stellarium \- A real-time photo-realistic sky generator
+stellarium \- A real-time realistic planetarium
 .SH SYNOPSIS
 .B stellarium [-vh] [--version] [--help]
 .SH DESCRIPTION
@@ -27,9 +27,7 @@ This manual page was written for the Debian distribution
 because the original program does not have a manual page.
 Instead, it has documentation in the GNU Info format; see below.
 .PP
-\fBstellarium\fP is a program that renders 3D photo-realistic skies in real time. With stellarium, you really see what you can see with your eyes, binoculars or a small telescope.
-.SH IMPORTANT
-\fBstellarium\fP should not be used for very high accurate calculation or ephemerids like eclipse predictions. However, it is the ideal program to prepare an observation evening with naked eye, binocular, or small telescope.
+\fBstellarium\fP is a free GPL software which renders realistic skies in real time with openGL. It is available for Linux/Unix, Windows and MacOSX. With Stellarium, you really see what you can see with your eyes, binoculars or a small telescope.
 .SH CONFIGURATION
 When you first launch stellarium, it will use the file default_config.ini from /usr/share/stellarium/config/ to create  config.ini into \fB$HOME/.stellarium\fP.
 The configuration options from this file are quite self-explanatory. Some configuration files examples are in /usr/share/doc/stellarium/examples.
@@ -44,5 +42,5 @@ display command usage and exit.
 .BR celestia (1),
 .BR openuniverse (1).
 .SH AUTHOR
-This manual page was written by Cédric Delfosse <cedric@debian.org>,
+This manual page was written by Cï¿½ric Delfosse <cedric@debian.org>,
 for the Debian GNU/Linux system (but may be used by others).
