--- a/po/fr.po
+++ b/po/fr.po
@@ -10,6 +10,10 @@
 # Fabien Chéreau, 2005.
 # Fabien Chéreau, 2005.
 # Fabien Chéreau, 2005.
+# Fabien Chéreau, 2005.
+# Fabien Chéreau, 2005.
+# Fabien Chéreau, 2005.
+# Fabien Chéreau, 2005.
 #  <stellarium@free.fr>, 2004.
 # Fabien Chéreau, 2005.
 #
@@ -18,14 +22,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
 "POT-Creation-Date: 2005-08-31 16:32+0200\n"
-"PO-Revision-Date: 2005-08-25 16:24-0700\n"
+"PO-Revision-Date: 2005-08-31 18:24+0200\n"
 "Last-Translator: Fabien Chéreau\n"
 "Language-Team:  <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: KBabel 1.10\n"
+"X-Generator: KBabel 1.10.2\n"
 
 #: src/main.cpp:52
 #, c-format
@@ -591,7 +595,7 @@ msgstr " Choix du paysage :"
 
 #: src/stel_ui_conf.cpp:362
 msgid "Please save option in tab \"Location\""
-msgstr "Sauvez les options dans l'onglet \"Location\""
+msgstr "Sauvez les options dans l'onglet \"Position\""
 
 #: src/stel_ui_conf.cpp:363
 msgid "to save current landscape as the default landscape."
@@ -711,7 +715,7 @@ msgstr ""
 
 #: src/stel_core.cpp:1297
 msgid "Invalid sky culture directory: "
-msgstr ""
+msgstr "Répertoire de culture de ciel invalide:"
 
 #: src/stel_ui_tuiconf.cpp:85
 msgid "Set Location "
@@ -868,6 +872,3 @@ msgstr "Décalage du centrage N-S"
 #: src/stel_ui_tuiconf.cpp:238
 msgid "E-W Centering Offset: "
 msgstr "Décalage du centrage E-O"
-
-#~ msgid "Track object"
-#~ msgstr "Suivi de l'objet"
