--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
-"POT-Creation-Date: 2006-01-21 22:59+0100\n"
+"POT-Creation-Date: 2006-01-25 21:50+0100\n"
 "PO-Revision-Date: 2006-01-18 00:07+0100\n"
 "Last-Translator: Antje Buchholz\n"
 "Language-Team:  <de@li.org>\n"
@@ -129,22 +129,22 @@ msgstr "Typ : "
 msgid "Size : "
 msgstr "Grösse : "
 
-#: src/nebula_mgr.cpp:359
+#: src/nebula_mgr.cpp:360
 #, fuzzy
 msgid "Loading NGC catalog: "
 msgstr "Loading NGC catalog: %d/%d"
 
-#: src/nebula_mgr.cpp:494
+#: src/nebula_mgr.cpp:495
 #, fuzzy
 msgid "Loading Sharpless catalog:"
 msgstr "Loading NGC catalog: %d/%d"
 
-#: src/nebula_mgr.cpp:559
+#: src/nebula_mgr.cpp:560
 #, fuzzy
 msgid "Loading Cadwell catalog:"
 msgstr "Loading NGC catalog: %d/%d"
 
-#: src/nebula_mgr.cpp:661
+#: src/nebula_mgr.cpp:662
 msgid "Loading Nebula Textures:"
 msgstr ""
 
@@ -257,8 +257,9 @@ msgid "Return to Current Time"
 msgstr ""
 
 #: src/stel_ui.cpp:612
+#, fuzzy
 msgid ""
-"   Please check for newer versions and send bug reports\n"
+"   Please check for newer versions and send bug reports\n"
 "and comments to us at: http://stellarium.sourceforge.net\n"
 "\n"
 msgstr ""
@@ -446,20 +447,21 @@ msgid "Save as default"
 msgstr ""
 
 #: src/stel_ui_conf.cpp:201
-msgid " Current Time :"
+msgid "Current Time :"
 msgstr ""
 
 #: src/stel_ui_conf.cpp:210
-msgid " Time Zone :"
+msgid "Time Zone :"
 msgstr ""
 
 #: src/stel_ui_conf.cpp:214
-msgid " Using System Default Time Zone"
+msgid "Using System Default Time Zone"
 msgstr ""
 
 #: src/stel_ui_conf.cpp:223
-msgid " Time speed : "
-msgstr ""
+#, fuzzy
+msgid "Time speed : "
+msgstr "Typ : "
 
 #: src/stel_ui_conf.cpp:231
 msgid ""
@@ -493,8 +495,9 @@ msgid "Save location"
 msgstr ""
 
 #: src/stel_ui_conf.cpp:308
-msgid " Projection :"
-msgstr ""
+#, fuzzy
+msgid "Projection :"
+msgstr "Standort"
 
 #: src/stel_ui_conf.cpp:314
 msgid "Fisheye Projection Mode"
@@ -505,7 +508,7 @@ msgid "Disk Viewport"
 msgstr ""
 
 #: src/stel_ui_conf.cpp:324
-msgid " Screen Resolution :"
+msgid "Screen Resolution :"
 msgstr ""
 
 #: src/stel_ui_conf.cpp:328
@@ -521,8 +524,9 @@ msgid "For unlisted screen resolution, edit the file :"
 msgstr ""
 
 #: src/stel_ui_conf.cpp:373
-msgid " Choose landscapes :"
-msgstr ""
+#, fuzzy
+msgid "Choose landscapes :"
+msgstr "Landschaften"
 
 #: src/stel_ui_conf.cpp:390
 msgid "Please save option in tab \"Location\""
@@ -604,8 +608,8 @@ msgstr "Planeten & Monde"
 msgid "Enter observatory name"
 msgstr ""
 
-#: src/stel_ui_conf.cpp:1119
-msgid " Current Time Speed is x"
+#: src/stel_ui_conf.cpp:1111
+msgid "Current Time Speed is x"
 msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:85
