--- a/po/de.po
+++ b/po/de.po
@@ -9,14 +9,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
-"POT-Creation-Date: 2006-03-01 18:38+0100\n"
+"POT-Creation-Date: 2006-03-09 10:23+0100\n"
 "PO-Revision-Date: 2006-01-18 00:07+0100\n"
 "Last-Translator: Antje Buchholz\n"
-"Language-Team:  <de@li.org>\n"
+"Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: KBabel 1.10.2\n"
 
 #: src/main.cpp:52
@@ -38,12 +37,12 @@ msgstr ""
 #: src/main.cpp:77
 #, c-format
 msgid "Try `%s --help' for more information.\n"
-msgstr ""
+msgstr "Versuchen Sie `%s --help' für weitere Informationen\n"
 
 #: src/constellation_mgr.cpp:155
 #, fuzzy
 msgid "Loading Constellation Art: "
-msgstr "Sternbilder"
+msgstr "Sternbilder "
 
 #: src/hip_star.cpp:77 src/planet.cpp:97
 msgid "Name : "
@@ -67,15 +66,15 @@ msgstr ""
 
 #: src/hip_star.cpp:112
 msgid "Spectral : "
-msgstr ""
+msgstr "spektral : "
 
 #: src/hip_star.cpp:115 src/nebula.cpp:93 src/planet.cpp:111
 msgid "Magnitude : "
-msgstr "Magnitude : "
+msgstr "Menge : "
 
 #: src/hip_star.cpp:116 src/planet.cpp:113
 msgid "Distance : "
-msgstr "Distanz : "
+msgstr "Entfernung : "
 
 #: src/hip_star.cpp:120
 msgid " Light Years"
@@ -90,9 +89,8 @@ msgid "ly"
 msgstr ""
 
 #: src/hip_star_mgr.cpp:176
-#, fuzzy
 msgid "Loading Hipparcos catalog:"
-msgstr "Loading NGC catalog: %d/%d"
+msgstr ""
 
 #: src/hip_star_mgr.cpp:855 src/hip_star_mgr.cpp:1522
 #, c-format
@@ -118,9 +116,8 @@ msgid "Size : "
 msgstr "Grösse : "
 
 #: src/nebula_mgr.cpp:253
-#, fuzzy
 msgid "Loading NGC catalog: "
-msgstr "Loading NGC catalog: %d/%d"
+msgstr ""
 
 #: src/nebula_mgr.cpp:377
 msgid "Loading Nebula Textures:"
@@ -146,126 +143,118 @@ msgstr ""
 msgid "Alt : "
 msgstr ""
 
-#: src/stel_ui.cpp:196
+#: src/stel_ui.cpp:195
 msgid "Message"
-msgstr "Nachricht"
+msgstr "Mitteilung"
 
-#: src/stel_ui.cpp:283
-msgid " (UTC)"
-msgstr ""
-
-#: src/stel_ui.cpp:505 src/stel_ui.cpp:638
+#: src/stel_ui.cpp:498 src/stel_ui.cpp:631
 msgid "Script commander"
 msgstr ""
 
-#: src/stel_ui.cpp:532
+#: src/stel_ui.cpp:525
 msgid "Invalid Script command"
-msgstr ""
+msgstr "ungültiger Skriptbefehl"
 
-#: src/stel_ui.cpp:602
+#: src/stel_ui.cpp:595
 msgid "Drawing of the Constellations [C]"
-msgstr ""
+msgstr "Graphik der Sternbilder [C]"
 
-#: src/stel_ui.cpp:604
+#: src/stel_ui.cpp:597
 msgid "Names of the Constellations [V]"
-msgstr ""
+msgstr "Namen der Sternbilder"
 
-#: src/stel_ui.cpp:606
+#: src/stel_ui.cpp:599
 msgid "Constellations Art [R]"
 msgstr ""
 
-#: src/stel_ui.cpp:608
+#: src/stel_ui.cpp:601
 msgid "Azimuthal Grid [Z]"
-msgstr ""
+msgstr "scheitelwinkeliges Netz [Z]"
 
-#: src/stel_ui.cpp:610
+#: src/stel_ui.cpp:603
 msgid "Equatorial Grid [E]"
-msgstr ""
+msgstr "äquatoriales Netz [E]"
 
-#: src/stel_ui.cpp:612
+#: src/stel_ui.cpp:605
 msgid "Ground [G]"
-msgstr ""
+msgstr "Erdboden [G]"
 
-#: src/stel_ui.cpp:614
+#: src/stel_ui.cpp:607
 msgid "Cardinal Points [Q]"
-msgstr ""
+msgstr "Himmelsrichtungen [Q]"
 
-#: src/stel_ui.cpp:616
+#: src/stel_ui.cpp:609
 msgid "Atmosphere [A]"
 msgstr "Atmosphäre [A]"
 
-#: src/stel_ui.cpp:618
+#: src/stel_ui.cpp:611
 msgid "Nebulas [N]"
 msgstr "Nebelflecke [N]"
 
-#: src/stel_ui.cpp:620
+#: src/stel_ui.cpp:613
 msgid "Help [H]"
 msgstr "Hilfe [H]"
 
-#: src/stel_ui.cpp:622
+#: src/stel_ui.cpp:615
 msgid "Equatorial/Altazimuthal Mount [ENTER]"
 msgstr ""
 
-#: src/stel_ui.cpp:624
+#: src/stel_ui.cpp:617
 msgid "Configuration window"
 msgstr ""
 
-#: src/stel_ui.cpp:626
+#: src/stel_ui.cpp:619
 msgid "Chart mode"
-msgstr ""
+msgstr "Graphikmodus"
 
-#: src/stel_ui.cpp:628
+#: src/stel_ui.cpp:621
 msgid "Night (red) mode"
-msgstr ""
+msgstr "Nachtmodus (rot)"
 
-#: src/stel_ui.cpp:631
+#: src/stel_ui.cpp:624
 msgid "Quit [CTRL + Q]"
-msgstr ""
+msgstr "beenden [CTRL + Q]"
+
+#: src/stel_ui.cpp:626
+msgid "Quit [CMD + Q]"
+msgstr "beenden [CMD + Q]"
+
+#: src/stel_ui.cpp:629
+msgid "Search for object"
+msgstr "Objekt suchen"
 
 #: src/stel_ui.cpp:633
-msgid "Quit [CMD + Q]"
-msgstr ""
-
-#: src/stel_ui.cpp:636
-msgid "Search for object"
-msgstr ""
-
-#: src/stel_ui.cpp:640
 msgid "Goto selected object [SPACE]"
-msgstr ""
+msgstr "sich zum gewünschten Objekt bewegen [SPACE]"
 
-#: src/stel_ui.cpp:646
+#: src/stel_ui.cpp:639
 msgid "Decrease Time Speed [J]"
-msgstr ""
+msgstr "Zeitgeschwindigkeit verringern [J]"
 
-#: src/stel_ui.cpp:648
+#: src/stel_ui.cpp:641
 msgid "Real Time Speed [K]"
-msgstr ""
+msgstr "Echtzeit [K]"
 
-#: src/stel_ui.cpp:650
+#: src/stel_ui.cpp:643
 msgid "Increase Time Speed [L]"
-msgstr ""
+msgstr "Zeitgeschwindigkeit erhöhen [L]"
 
-#: src/stel_ui.cpp:652
+#: src/stel_ui.cpp:645
 msgid "Return to Current Time"
-msgstr ""
+msgstr "zurück zur Laufzeit"
 
-#: src/stel_ui.cpp:661
-#, fuzzy
+#: src/stel_ui.cpp:654
 msgid ""
 "   Please check for newer versions and send bug reports\n"
 "and comments to us at: http://www.stellarium.org\n"
 "\n"
 msgstr ""
-"   Please check for newer versions and send bug reports\n"
-"and comments to us at: http://stellarium.sourceforge.net\n"
-"\n"
 
-#: src/stel_ui.cpp:680
+#: src/stel_ui.cpp:673
 msgid "Information"
-msgstr ""
+msgstr "Informationen"
 
-#: src/stel_ui.cpp:692
+#: src/stel_ui.cpp:685
 msgid ""
 "Movement & selection:\n"
 "Arrow Keys       : Change viewing RA/DE\n"
@@ -280,7 +269,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#: src/stel_ui.cpp:703
+#: src/stel_ui.cpp:696
 msgid ""
 "Display options:\n"
 "ENTER : Equatorial/altazimuthal mount\n"
@@ -296,7 +285,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#: src/stel_ui.cpp:715
+#: src/stel_ui.cpp:708
 msgid ""
 "Dialogs & other controls:\n"
 "H   : Help                      I   : About Stellarium\n"
@@ -307,7 +296,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#: src/stel_ui.cpp:722
+#: src/stel_ui.cpp:715
 msgid ""
 "Time & Date:\n"
 "6   : Time rate pause           7   : Time rate 0\n"
@@ -318,7 +307,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#: src/stel_ui.cpp:729
+#: src/stel_ui.cpp:722
 msgid ""
 "During Script Playback:\n"
 "CTRL + C : End Script\n"
@@ -326,39 +315,40 @@ msgid ""
 "\n"
 msgstr ""
 
-#: src/stel_ui.cpp:733
+#: src/stel_ui.cpp:726
 msgid ""
 "Misc:\n"
 "9   : Toggle meteor shower rates\n"
 msgstr ""
 
-#: src/stel_ui.cpp:736
+#: src/stel_ui.cpp:729
 msgid "CTRL + Q : Quit\n"
-msgstr ""
+msgstr "CTRL + Q : beenden\n"
 
-#: src/stel_ui.cpp:738
+#: src/stel_ui.cpp:731
 msgid "CMD + Q  : Quit\n"
-msgstr ""
+msgstr "CMD + Q : beenden\n"
 
-#: src/stel_ui.cpp:744
+#: src/stel_ui.cpp:737
 msgid "Help"
-msgstr ""
+msgstr "Hilfe"
 
-#: src/stel_ui.cpp:1092
+#: src/stel_ui.cpp:1085
 msgid "Command recording stopped."
-msgstr ""
+msgstr "Befehlsaufnahme beendet."
 
-#: src/stel_ui.cpp:1100
+#: src/stel_ui.cpp:1093
 msgid "Recording commands to script file:\n"
-msgstr ""
+msgstr "Befehle in die Skriptdatei aufnehmen:\n"
 
-#: src/stel_ui.cpp:1102
+#: src/stel_ui.cpp:1095
 msgid "Hit CTRL-R again to stop.\n"
 msgstr ""
 
-#: src/stel_ui.cpp:1106
+#: src/stel_ui.cpp:1099
 msgid "Error: Unable to open script file to record commands."
 msgstr ""
+"Fehler: Skriptdatei kann nicht geöffnet werden, um Hinweise festzuhalten"
 
 #: src/stel_ui_conf.cpp:27
 msgid "Configuration"
@@ -374,7 +364,7 @@ msgstr ""
 
 #: src/stel_ui_conf.cpp:64
 msgid "Star Twinkle. Amount :"
-msgstr ""
+msgstr "Glitzern der Sterne. Menge :"
 
 #: src/stel_ui_conf.cpp:80
 msgid "Constellations"
@@ -386,7 +376,7 @@ msgstr "Namen der Sternbilder"
 
 #: src/stel_ui_conf.cpp:90
 msgid "Selected Constellation Only"
-msgstr ""
+msgstr "nur ausgewählte Konstellationen"
 
 #: src/stel_ui_conf.cpp:103
 msgid "Nebulas Names. Up to mag :"
@@ -402,15 +392,15 @@ msgstr ""
 
 #: src/stel_ui_conf.cpp:132
 msgid "Planets Hints"
-msgstr ""
+msgstr "Planetenspur"
 
 #: src/stel_ui_conf.cpp:143
 msgid "Equatorial Grid"
-msgstr ""
+msgstr "äquatoriales Netz"
 
 #: src/stel_ui_conf.cpp:148
 msgid "Azimuthal Grid"
-msgstr ""
+msgstr "scheitelwinkeliges Netz"
 
 #: src/stel_ui_conf.cpp:153
 msgid "Equator Line"
@@ -418,15 +408,15 @@ msgstr "Äquatorlinie"
 
 #: src/stel_ui_conf.cpp:158
 msgid "Ecliptic Line"
-msgstr ""
+msgstr "Sonnenbahn"
 
 #: src/stel_ui_conf.cpp:169
 msgid "Ground"
-msgstr ""
+msgstr "Erdboden"
 
 #: src/stel_ui_conf.cpp:174
 msgid "Cardinal Points"
-msgstr ""
+msgstr "Himmelsrichtungen"
 
 #: src/stel_ui_conf.cpp:179
 msgid "Atmosphere"
@@ -438,24 +428,23 @@ msgstr "Nebel"
 
 #: src/stel_ui_conf.cpp:189 src/stel_ui_conf.cpp:362
 msgid "Save as default"
-msgstr ""
+msgstr "als Vorgabe speichern"
 
 #: src/stel_ui_conf.cpp:201
 msgid "Current Time :"
-msgstr ""
+msgstr "Echtzeit :"
 
 #: src/stel_ui_conf.cpp:210
 msgid "Time Zone :"
-msgstr ""
+msgstr "Zeitzone :"
 
 #: src/stel_ui_conf.cpp:214
 msgid "Using System Default Time Zone"
-msgstr ""
+msgstr "die vom System vorgegebene Zeitzone benutzen"
 
 #: src/stel_ui_conf.cpp:223
-#, fuzzy
 msgid "Time speed : "
-msgstr "Typ : "
+msgstr "Zeitgeschwindigkeit "
 
 #: src/stel_ui_conf.cpp:231
 msgid ""
@@ -463,39 +452,41 @@ msgid ""
 "   time speed.\n"
 "Use key K to return to real time speed."
 msgstr ""
+"Bedienen Sie Taste J und L zur Verringerung und Erhöhung\n"
+"   der Zeitgeschwindigkeit.\n"
+"Bedienen Sie Taste K, um zur Echtzeitgeschwindigkeit zurückzukehren."
 
 #: src/stel_ui_conf.cpp:253
 msgid "Cursor : "
-msgstr ""
+msgstr "Positionsanzeiger : "
 
 #: src/stel_ui_conf.cpp:258
 msgid "Selected : "
-msgstr ""
+msgstr "ausgewählt : "
 
 #: src/stel_ui_conf.cpp:263
 msgid "Longitude : "
-msgstr ""
+msgstr "Längengrad : "
 
 #: src/stel_ui_conf.cpp:271
 msgid "Latitude : "
-msgstr ""
+msgstr "Breitengrad : "
 
 #: src/stel_ui_conf.cpp:279
 msgid "Altitude : "
-msgstr ""
+msgstr "Höhenlage : "
 
 #: src/stel_ui_conf.cpp:286
 msgid "Save location"
-msgstr ""
+msgstr "Standort speichern"
 
 #: src/stel_ui_conf.cpp:308
-#, fuzzy
 msgid "Projection :"
-msgstr "Standort"
+msgstr "Projektion :"
 
 #: src/stel_ui_conf.cpp:314
 msgid "Fisheye Projection Mode"
-msgstr ""
+msgstr "Fischaugenprojektionsmodus"
 
 #: src/stel_ui_conf.cpp:319
 msgid "Disk Viewport"
@@ -503,11 +494,11 @@ msgstr ""
 
 #: src/stel_ui_conf.cpp:324
 msgid "Screen Resolution :"
-msgstr ""
+msgstr "Bildschirmauflösung :"
 
 #: src/stel_ui_conf.cpp:328
 msgid "Restart program for"
-msgstr ""
+msgstr "Programm neustarten"
 
 #: src/stel_ui_conf.cpp:329
 msgid "change to apply."
@@ -515,12 +506,11 @@ msgstr ""
 
 #: src/stel_ui_conf.cpp:353
 msgid "For unlisted screen resolution, edit the file :"
-msgstr ""
+msgstr "für nicht aufgeführte Bildschirmauflösung Datei editieren :"
 
 #: src/stel_ui_conf.cpp:373
-#, fuzzy
 msgid "Choose landscapes :"
-msgstr "Landschaften"
+msgstr "Landschaften auswählen :"
 
 #: src/stel_ui_conf.cpp:390
 msgid "Please save option in tab \"Location\""
@@ -528,7 +518,7 @@ msgstr ""
 
 #: src/stel_ui_conf.cpp:391
 msgid "to save current landscape as the default landscape."
-msgstr ""
+msgstr "momentane Landschaft als Standardlandschaft speichern."
 
 #: src/stel_ui_conf.cpp:399
 msgid "Date & Time"
@@ -548,7 +538,7 @@ msgstr "Video"
 
 #: src/stel_ui_conf.cpp:403
 msgid "Rendering"
-msgstr ""
+msgstr "Darstellung"
 
 #: src/stel_ui_conf.cpp:507
 msgid "Object Search"
@@ -560,7 +550,7 @@ msgstr "Sternennummer/Name"
 
 #: src/stel_ui_conf.cpp:530
 msgid "eg. 60718 (aCrux) or Canopus"
-msgstr ""
+msgstr "z.B 60718 (aKreuz des Südens) oder Canopus"
 
 #: src/stel_ui_conf.cpp:531
 msgid "HP 60718, HD 108248, SAO 251904"
@@ -572,7 +562,7 @@ msgstr "Sternbilder"
 
 #: src/stel_ui_conf.cpp:556
 msgid "eg. Crux"
-msgstr ""
+msgstr "z.B. Kreuz des Südens"
 
 #: src/stel_ui_conf.cpp:575 src/stel_ui_conf.cpp:684
 msgid "Nebula"
@@ -600,189 +590,189 @@ msgstr "Planeten & Monde"
 
 #: src/stel_ui_conf.cpp:956
 msgid "Enter observatory name"
-msgstr ""
+msgstr "Name der Sternenwarte eingeben"
 
 #: src/stel_ui_conf.cpp:1106
 msgid "Current Time Speed is x"
-msgstr ""
+msgstr "aktuelle Zeitgeschwindigkeit ist x"
 
-#: src/stel_ui_tuiconf.cpp:85
+#: src/stel_ui_tuiconf.cpp:77
 msgid "Set Location "
-msgstr ""
+msgstr "Lage bestimmen "
 
-#: src/stel_ui_tuiconf.cpp:86
+#: src/stel_ui_tuiconf.cpp:78
 msgid "Set Time "
-msgstr ""
+msgstr "Zeit bestimmen "
 
-#: src/stel_ui_tuiconf.cpp:87
+#: src/stel_ui_tuiconf.cpp:79
 msgid "General "
-msgstr ""
+msgstr "gewöhnlich "
 
-#: src/stel_ui_tuiconf.cpp:88
+#: src/stel_ui_tuiconf.cpp:80
 msgid "Stars "
 msgstr "Sterne "
 
-#: src/stel_ui_tuiconf.cpp:89
+#: src/stel_ui_tuiconf.cpp:81
 msgid "Colors "
 msgstr "Farben "
 
-#: src/stel_ui_tuiconf.cpp:90
+#: src/stel_ui_tuiconf.cpp:82
 msgid "Effects "
 msgstr "Effekte "
 
-#: src/stel_ui_tuiconf.cpp:91
+#: src/stel_ui_tuiconf.cpp:83
 msgid "Scripts "
 msgstr "Skripte "
 
-#: src/stel_ui_tuiconf.cpp:92
+#: src/stel_ui_tuiconf.cpp:84
 msgid "Administration "
 msgstr "Administration "
 
-#: src/stel_ui_tuiconf.cpp:103
+#: src/stel_ui_tuiconf.cpp:95
 msgid "Latitude: "
-msgstr ""
+msgstr "Breitengrad: "
 
-#: src/stel_ui_tuiconf.cpp:105
+#: src/stel_ui_tuiconf.cpp:97
 msgid "Longitude: "
-msgstr ""
+msgstr "Längengrad: "
 
-#: src/stel_ui_tuiconf.cpp:107
+#: src/stel_ui_tuiconf.cpp:99
 msgid "Altitude (m): "
-msgstr ""
+msgstr "Höhenlage (m): "
 
-#: src/stel_ui_tuiconf.cpp:114
+#: src/stel_ui_tuiconf.cpp:106
 msgid "Sky Time: "
-msgstr ""
+msgstr "Himmelszeit: "
 
-#: src/stel_ui_tuiconf.cpp:116
+#: src/stel_ui_tuiconf.cpp:108
 msgid "Set Time Zone: "
-msgstr ""
+msgstr "Zeitzone bestimmen: "
 
-#: src/stel_ui_tuiconf.cpp:119
+#: src/stel_ui_tuiconf.cpp:111
 msgid "Preset Sky Time: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:121
+#: src/stel_ui_tuiconf.cpp:113
 msgid "Sky Time At Start-up: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:125
+#: src/stel_ui_tuiconf.cpp:117
 msgid "Time Display Format: "
-msgstr ""
+msgstr "Zeit-Darstellungsform: "
 
-#: src/stel_ui_tuiconf.cpp:130
+#: src/stel_ui_tuiconf.cpp:122
 msgid "Date Display Format: "
-msgstr ""
+msgstr "Darstellungsform datieren: "
 
-#: src/stel_ui_tuiconf.cpp:147
+#: src/stel_ui_tuiconf.cpp:139
 msgid "Sky Culture: "
-msgstr ""
+msgstr "Himmelskultur: "
+
+#: src/stel_ui_tuiconf.cpp:144
+msgid "Sky Language: "
+msgstr "Himmelssprache: "
 
 #: src/stel_ui_tuiconf.cpp:152
-msgid "Sky Language: "
-msgstr ""
-
-#: src/stel_ui_tuiconf.cpp:160
 msgid "Show: "
-msgstr ""
+msgstr "anzeigen: "
 
-#: src/stel_ui_tuiconf.cpp:160 src/stel_ui_tuiconf.cpp:198
+#: src/stel_ui_tuiconf.cpp:152 src/stel_ui_tuiconf.cpp:190
 msgid "Yes"
 msgstr "Ja"
 
-#: src/stel_ui_tuiconf.cpp:160 src/stel_ui_tuiconf.cpp:198
+#: src/stel_ui_tuiconf.cpp:152 src/stel_ui_tuiconf.cpp:190
 msgid "No"
 msgstr "Nein"
 
-#: src/stel_ui_tuiconf.cpp:162
+#: src/stel_ui_tuiconf.cpp:154
 msgid "Star Magnitude Multiplier: "
-msgstr ""
+msgstr "Vervielfacher der Sternenmänge: "
 
-#: src/stel_ui_tuiconf.cpp:164
+#: src/stel_ui_tuiconf.cpp:156
 msgid "Maximum Magnitude to Label: "
-msgstr ""
+msgstr "maximal zu benennende Menge: "
 
-#: src/stel_ui_tuiconf.cpp:166
+#: src/stel_ui_tuiconf.cpp:158
 msgid "Twinkling: "
-msgstr ""
+msgstr "glitzernd: "
 
-#: src/stel_ui_tuiconf.cpp:175
+#: src/stel_ui_tuiconf.cpp:167
 msgid "Constellation lines: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:179
+#: src/stel_ui_tuiconf.cpp:171
 msgid "Constellation labels: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:183
+#: src/stel_ui_tuiconf.cpp:175
 msgid "Cardinal points: "
-msgstr ""
+msgstr "Himmelsrichtungen: "
 
-#: src/stel_ui_tuiconf.cpp:192
+#: src/stel_ui_tuiconf.cpp:184
 msgid "Landscape: "
 msgstr "Landschaft: "
 
-#: src/stel_ui_tuiconf.cpp:198
+#: src/stel_ui_tuiconf.cpp:190
 msgid "Manual zoom: "
 msgstr "Manueller Zoom: "
 
-#: src/stel_ui_tuiconf.cpp:202
+#: src/stel_ui_tuiconf.cpp:194
 msgid "Object Sizing Rule: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:202
+#: src/stel_ui_tuiconf.cpp:194
 msgid "Point"
 msgstr "Punkt"
 
-#: src/stel_ui_tuiconf.cpp:202
+#: src/stel_ui_tuiconf.cpp:194
 msgid "Magnitude"
-msgstr ""
+msgstr "Menge"
 
-#: src/stel_ui_tuiconf.cpp:206
+#: src/stel_ui_tuiconf.cpp:198
 msgid "Magnitude Sizing Multiplier: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:210
+#: src/stel_ui_tuiconf.cpp:202
 msgid "Milky Way intensity: "
-msgstr ""
+msgstr "Helligkeit der Milchstraße: "
+
+#: src/stel_ui_tuiconf.cpp:206
+msgid "Maximum Nebula Magnitude to Label: "
+msgstr "maximal zu benennende Menge der Nebelflecke: "
+
+#: src/stel_ui_tuiconf.cpp:210
+msgid "Zoom Duration: "
+msgstr "Dauerzoom: "
 
 #: src/stel_ui_tuiconf.cpp:214
-msgid "Maximum Nebula Magnitude to Label: "
-msgstr ""
-
-#: src/stel_ui_tuiconf.cpp:218
-msgid "Zoom Duration: "
-msgstr ""
-
-#: src/stel_ui_tuiconf.cpp:222
 msgid "Cursor Timeout: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:228
+#: src/stel_ui_tuiconf.cpp:220
 msgid "Local Script: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:234
+#: src/stel_ui_tuiconf.cpp:226
 msgid "CD/DVD Script: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:242
+#: src/stel_ui_tuiconf.cpp:234
 msgid "Load Default Configuration: "
-msgstr ""
+msgstr "Standardkonstellation laden: "
 
-#: src/stel_ui_tuiconf.cpp:244
+#: src/stel_ui_tuiconf.cpp:236
 msgid "Save Current Configuration as Default: "
-msgstr ""
+msgstr "aktuelle Konstellation als Standard speichern: "
 
-#: src/stel_ui_tuiconf.cpp:246
+#: src/stel_ui_tuiconf.cpp:238
 msgid "Update me via Internet: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:262
+#: src/stel_ui_tuiconf.cpp:254
 msgid "N-S Centering Offset: "
 msgstr ""
 
-#: src/stel_ui_tuiconf.cpp:266
+#: src/stel_ui_tuiconf.cpp:258
 msgid "E-W Centering Offset: "
 msgstr ""
 
@@ -1271,3 +1261,12 @@ msgstr "Segel des Schiffs"
 #, fuzzy
 #~ msgid "Loading Cadwell catalog:"
 #~ msgstr "Loading NGC catalog: %d/%d"
+
+#~ msgid ""
+#~ "   Please check for newer versions and send bug reports\n"
+#~ "and comments to us at: http://stellarium.sourceforge.net\n"
+#~ "\n"
+#~ msgstr ""
+#~ "   Please check for newer versions and send bug reports\n"
+#~ "and comments to us at: http://stellarium.sourceforge.net\n"
+#~ "\n"
