Fixed formatting error after an auto code format.

--- a/po/fr.po
+++ b/po/fr.po
@@ -6,15 +6,16 @@
 # Fabien Chéreau, 2006.
 # Fabien Chéreau, 2006.
 # Fabien Chéreau, 2006.
+# Fabien Chéreau, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
-"POT-Creation-Date: 2006-03-12 04:29+0100\n"
-"PO-Revision-Date: 2006-02-07 16:54+0100\n"
+"POT-Creation-Date: 2006-03-18 22:05+0100\n"
+"PO-Revision-Date: 2006-03-18 22:03+0100\n"
 "Last-Translator: Fabien Chéreau\n"
-"Language-Team: <fr@li.org>\n"
+"Language-Team:  <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -226,12 +227,11 @@ msgstr "Revient au Temps Actuel"
 #, fuzzy
 msgid ""
 "   Please check for newer versions and send bug reports\n"
-"\t                                   and comments to us at: http://www."
-"stellarium.org\n"
+"\t\t\tand comments to us at: http://www.stellarium.org\n"
 "\n"
 msgstr ""
 "   Merci d'essayer une version plus récente.\n"
-"Vous pouvez également vous envoyer un rapport de bogue \n"
+"Vous pouvez également envoyer un rapport de bogue \n"
 "ou un commentaire depuis notre site : \n"
 "http://www.stellarium.org\n"
 "\n"
@@ -244,17 +244,16 @@ msgstr "Information"
 #, fuzzy
 msgid ""
 "Movement & selection:\n"
-"\t                            Arrow Keys       : Change viewing RA/DE\n"
-"\t                            Page Up/Down     : Zoom\n"
-"\t                            CTRL+Up/Down     : Zoom\n"
-"\t                            Left Click       : Select object\n"
-"\t                            Right Click      : Unselect\n"
-"\t                            CTRL+Left Click  : Unselect\n"
-"\t                            \\                : Zoom out (planet + moons "
-"if applicable)\n"
-"\t                            /                : Zoom to selected object\n"
-"\t                            SPACE            : Center on selected object\n"
-"\t                            \n"
+"Arrow Keys       : Change viewing RA/DE\n"
+"Page Up/Down     : Zoom\n"
+"CTRL+Up/Down     : Zoom\n"
+"Left Click       : Select object\n"
+"Right Click      : Unselect\n"
+"CTRL+Left Click  : Unselect\n"
+"\\                : Zoom out (planet + moons if applicable)\n"
+"/                : Zoom to selected object\n"
+"SPACE            : Center on selected object\n"
+"\n"
 msgstr ""
 "Mouvement & sélection:\n"
 "Flèches          : Change vue AD/DE\n"
@@ -272,22 +271,17 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Display options:\n"
-"\t                            ENTER : Equatorial/altazimuthal mount\n"
-"\t                            F1  : Toggle fullscreen if possible.\n"
-"\t                            C   : Constellation lines       V   : "
-"Constellation labels\n"
-"\t                            R   : Constellation art         E   : "
-"Equatorial grid\n"
-"\t                            Z   : Azimuthal grid            N   : Nebula "
-"labels\n"
-"\t                            P   : Planet labels             G   : Ground\n"
-"\t                            A   : Atmosphere                F   : Fog\n"
-"\t                            Q   : Cardinal points           O   : Toggle "
-"moon scaling\n"
-"\t                            T   : Object tracking           S   : Stars\n"
-"\t                            4 , : Ecliptic line             5 . : Equator "
-"line\n"
-"\t                            \n"
+"ENTER : Equatorial/altazimuthal mount\n"
+"F1  : Toggle fullscreen if possible.\n"
+"C   : Constellation lines       V   : Constellation labels\n"
+"R   : Constellation art         E   : Equatorial grid\n"
+"Z   : Azimuthal grid            N   : Nebula labels\n"
+"P   : Planet labels             G   : Ground\n"
+"A   : Atmosphere                F   : Fog\n"
+"Q   : Cardinal points           O   : Toggle moon scaling\n"
+"T   : Object tracking           S   : Stars\n"
+"4 , : Ecliptic line             5 . : Equator line\n"
+"\n"
 msgstr ""
 "Options d'affichage:\n"
 "ENTREE : Monture Equatoriale/altazimuthale\n"
@@ -306,14 +300,12 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Dialogs & other controls:\n"
-"\t                            H   : Help                      I   : About "
-"Stellarium\n"
-"\t                            M   : Text menu                 1 (one)  : "
-"Configuration\n"
-"\t                            CTRL + S : Take a screenshot\n"
-"\t                            CTRL + R : Toggle script recording\n"
-"\t                            CTRL + F : Toggle object finder\n"
-"\t                            \n"
+"H   : Help                      I   : About Stellarium\n"
+"M   : Text menu                 1 (one)  : Configuration\n"
+"CTRL + S : Take a screenshot\n"
+"CTRL + R : Toggle script recording\n"
+"CTRL + F : Toggle object finder\n"
+"\n"
 msgstr ""
 "Dialogues & autres controles:\n"
 "H   : Aide                      I   : A propos de Stellarium\n"
@@ -327,17 +319,12 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Time & Date:\n"
-"\t                            6   : Time rate pause           7   : Time "
-"rate 0\n"
-"\t                            8   : Set current time          J   : Decrease "
-"time rate\n"
-"\t                            K   : Normal time rate          L   : Increase "
-"time rate\n"
-"\t                            -   : Back 24 hours             =   : Forward "
-"24 hours\n"
-"\t                            [   : Back 7 days               ]   : Forward "
-"7 days\n"
-"\t                            \n"
+"6   : Time rate pause           7   : Time rate 0\n"
+"8   : Set current time          J   : Decrease time rate\n"
+"K   : Normal time rate          L   : Increase time rate\n"
+"-   : Back 24 hours             =   : Forward 24 hours\n"
+"[   : Back 7 days               ]   : Forward 7 days\n"
+"\n"
 msgstr ""
 "Temps & Date:\n"
 "6   : Arrête le temps           7   : Vitesse du Temps 0\n"
@@ -351,10 +338,9 @@ msgstr ""
 #, fuzzy
 msgid ""
 "During Script Playback:\n"
-"\t                            CTRL + C : End Script\n"
-"\t                            6   : pause script              K   : resume "
-"script\n"
-"\t                            \n"
+"CTRL + C : End Script\n"
+"6   : pause script              K   : resume script\n"
+"\n"
 msgstr ""
 "Pendant la lecture d'un script:\n"
 "CTRL + C : Arrête le script\n"
@@ -365,7 +351,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Misc:\n"
-"\t                            9   : Toggle meteor shower rates\n"
+"9   : Toggle meteor shower rates\n"
 msgstr ""
 "Autres:\n"
 "9   : Alterne la fréquence des pluies d'étoiles filantes\n"
@@ -1300,45 +1286,3 @@ msgstr "Vierge"
 #: src/translations.h:156
 msgid "Vela"
 msgstr "Voiles"
-
-#~ msgid "ly"
-#~ msgstr "al"
-
-#~ msgid "Name : "
-#~ msgstr "Nom : "
-
-#~ msgid "(Dbl)"
-#~ msgstr "(Bbl)"
-
-#~ msgid "RA : "
-#~ msgstr "AD : "
-
-#~ msgid "DE : "
-#~ msgstr "DE : "
-
-#~ msgid "Az  : "
-#~ msgstr "Az  : "
-
-#~ msgid "Alt : "
-#~ msgstr "Alt : "
-
-#~ msgid " (UTC)"
-#~ msgstr " (UTC)"
-
-#~ msgid "Cat: NGC "
-#~ msgstr "Cat: NGC "
-
-#~ msgid "Loading Sharpless catalog:"
-#~ msgstr "Chargement du catalogue Sharpless :"
-
-#~ msgid "Loading Cadwell catalog:"
-#~ msgstr "Chargement du catalogue Cadwell:"
-
-#~ msgid ""
-#~ "   Please check for newer versions and send bug reports\n"
-#~ "and comments to us at: http://stellarium.sourceforge.net\n"
-#~ "\n"
-#~ msgstr ""
-#~ "   Téléchargez les mise à jour et envoyez vos rapports de \n"
-#~ "bogues sur : http://stellarium.sourceforge.net\n"
-#~ "\n"
