--- a/po/da.po
+++ b/po/da.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
-"POT-Creation-Date: 2006-03-12 04:29+0100\n"
+"POT-Creation-Date: 2006-03-18 22:05+0100\n"
 "PO-Revision-Date: 2005-10-12 03:24+0100\n"
 "Last-Translator: Henrik Johansen\n"
 "Language-Team:\n"
@@ -224,12 +224,11 @@ msgstr "Retur til aktuel tid"
 #, fuzzy
 msgid ""
 "   Please check for newer versions and send bug reports\n"
-"\t                                   and comments to us at: http://www."
-"stellarium.org\n"
+"\t\t\tand comments to us at: http://www.stellarium.org\n"
 "\n"
 msgstr ""
-"   Venligst check om en nyere version er tilgængelig og send fejlrapporter \n"
-"og kommentarer til os på http://www.stellarium.org\n"
+"   Venligst tjek om du har seneste version af Stellarium før du rapporterer\n"
+"problemer til webstedet http://stellarium.sourceforge.net\n"
 "\n"
 
 #: src/stel_ui.cpp:673
@@ -240,17 +239,16 @@ msgstr "Information"
 #, fuzzy
 msgid ""
 "Movement & selection:\n"
-"\t                            Arrow Keys       : Change viewing RA/DE\n"
-"\t                            Page Up/Down     : Zoom\n"
-"\t                            CTRL+Up/Down     : Zoom\n"
-"\t                            Left Click       : Select object\n"
-"\t                            Right Click      : Unselect\n"
-"\t                            CTRL+Left Click  : Unselect\n"
-"\t                            \\                : Zoom out (planet + moons "
-"if applicable)\n"
-"\t                            /                : Zoom to selected object\n"
-"\t                            SPACE            : Center on selected object\n"
-"\t                            \n"
+"Arrow Keys       : Change viewing RA/DE\n"
+"Page Up/Down     : Zoom\n"
+"CTRL+Up/Down     : Zoom\n"
+"Left Click       : Select object\n"
+"Right Click      : Unselect\n"
+"CTRL+Left Click  : Unselect\n"
+"\\                : Zoom out (planet + moons if applicable)\n"
+"/                : Zoom to selected object\n"
+"SPACE            : Center on selected object\n"
+"\n"
 msgstr ""
 "Navigering & valg :\n"
 "Pil taster : Skift mellem RA/DE\n"
@@ -268,22 +266,17 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Display options:\n"
-"\t                            ENTER : Equatorial/altazimuthal mount\n"
-"\t                            F1  : Toggle fullscreen if possible.\n"
-"\t                            C   : Constellation lines       V   : "
-"Constellation labels\n"
-"\t                            R   : Constellation art         E   : "
-"Equatorial grid\n"
-"\t                            Z   : Azimuthal grid            N   : Nebula "
-"labels\n"
-"\t                            P   : Planet labels             G   : Ground\n"
-"\t                            A   : Atmosphere                F   : Fog\n"
-"\t                            Q   : Cardinal points           O   : Toggle "
-"moon scaling\n"
-"\t                            T   : Object tracking           S   : Stars\n"
-"\t                            4 , : Ecliptic line             5 . : Equator "
-"line\n"
-"\t                            \n"
+"ENTER : Equatorial/altazimuthal mount\n"
+"F1  : Toggle fullscreen if possible.\n"
+"C   : Constellation lines       V   : Constellation labels\n"
+"R   : Constellation art         E   : Equatorial grid\n"
+"Z   : Azimuthal grid            N   : Nebula labels\n"
+"P   : Planet labels             G   : Ground\n"
+"A   : Atmosphere                F   : Fog\n"
+"Q   : Cardinal points           O   : Toggle moon scaling\n"
+"T   : Object tracking           S   : Stars\n"
+"4 , : Ecliptic line             5 . : Equator line\n"
+"\n"
 msgstr ""
 "Visninger: \n"
 "ENTER : Ækvatorial/Azimuthal visning\n"
@@ -302,14 +295,12 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Dialogs & other controls:\n"
-"\t                            H   : Help                      I   : About "
-"Stellarium\n"
-"\t                            M   : Text menu                 1 (one)  : "
-"Configuration\n"
-"\t                            CTRL + S : Take a screenshot\n"
-"\t                            CTRL + R : Toggle script recording\n"
-"\t                            CTRL + F : Toggle object finder\n"
-"\t                            \n"
+"H   : Help                      I   : About Stellarium\n"
+"M   : Text menu                 1 (one)  : Configuration\n"
+"CTRL + S : Take a screenshot\n"
+"CTRL + R : Toggle script recording\n"
+"CTRL + F : Toggle object finder\n"
+"\n"
 msgstr ""
 "Øvrige funktioner:\n"
 "H : Hjælp I : Om Stellarium\n"
@@ -323,17 +314,12 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Time & Date:\n"
-"\t                            6   : Time rate pause           7   : Time "
-"rate 0\n"
-"\t                            8   : Set current time          J   : Decrease "
-"time rate\n"
-"\t                            K   : Normal time rate          L   : Increase "
-"time rate\n"
-"\t                            -   : Back 24 hours             =   : Forward "
-"24 hours\n"
-"\t                            [   : Back 7 days               ]   : Forward "
-"7 days\n"
-"\t                            \n"
+"6   : Time rate pause           7   : Time rate 0\n"
+"8   : Set current time          J   : Decrease time rate\n"
+"K   : Normal time rate          L   : Increase time rate\n"
+"-   : Back 24 hours             =   : Forward 24 hours\n"
+"[   : Back 7 days               ]   : Forward 7 days\n"
+"\n"
 msgstr ""
 "Tid & Dato:\n"
 "6 : Tids acceleration pause 7 : Tids acceleration 0\n"
@@ -347,10 +333,9 @@ msgstr ""
 #, fuzzy
 msgid ""
 "During Script Playback:\n"
-"\t                            CTRL + C : End Script\n"
-"\t                            6   : pause script              K   : resume "
-"script\n"
-"\t                            \n"
+"CTRL + C : End Script\n"
+"6   : pause script              K   : resume script\n"
+"\n"
 msgstr ""
 "Skript genveje:\n"
 "CTRL + C : Stop skript\n"
@@ -361,7 +346,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Misc:\n"
-"\t                            9   : Toggle meteor shower rates\n"
+"9   : Toggle meteor shower rates\n"
 msgstr ""
 "Diverse:\n"
 "9 : Skift synlighed på meteor regn\n"
@@ -1296,6 +1281,18 @@ msgstr "Jomfruen"
 msgid "Vela"
 msgstr "Sejlet"
 
+#, fuzzy
+#~ msgid ""
+#~ "   Please check for newer versions and send bug reports\n"
+#~ "\t                                   and comments to us at: http://www."
+#~ "stellarium.org\n"
+#~ "\n"
+#~ msgstr ""
+#~ "   Venligst check om en nyere version er tilgængelig og send "
+#~ "fejlrapporter \n"
+#~ "og kommentarer til os på http://www.stellarium.org\n"
+#~ "\n"
+
 #~ msgid "ly"
 #~ msgstr "lysår"
 
@@ -1328,16 +1325,6 @@ msgstr "Sejlet"
 
 #~ msgid "Loading Cadwell catalog:"
 #~ msgstr "Henter Cadwell katalog:"
-
-#~ msgid ""
-#~ "   Please check for newer versions and send bug reports\n"
-#~ "and comments to us at: http://stellarium.sourceforge.net\n"
-#~ "\n"
-#~ msgstr ""
-#~ "   Venligst tjek om du har seneste version af Stellarium før du "
-#~ "rapporterer\n"
-#~ "problemer til webstedet http://stellarium.sourceforge.net\n"
-#~ "\n"
 
 #, fuzzy
 #~ msgid ""
