--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
-"POT-Creation-Date: 2006-03-12 04:29+0100\n"
+"POT-Creation-Date: 2006-03-18 22:05+0100\n"
 "PO-Revision-Date: 2005-07-25 18:00+0100\n"
 "Last-Translator: Sergio Trujillo <sergiotrujillo@telefonica.net>\n"
 "Language-Team:\n"
@@ -226,12 +226,12 @@ msgstr "Volver a la hora y fecha actual"
 #, fuzzy
 msgid ""
 "   Please check for newer versions and send bug reports\n"
-"\t                                   and comments to us at: http://www."
-"stellarium.org\n"
+"\t\t\tand comments to us at: http://www.stellarium.org\n"
 "\n"
 msgstr ""
-"   Revisa por nuevas versiones y envíanos reportes de errores\n"
-"y comentarios a: http://www.stellarium.org\n"
+"Por favor comprueba si tienes la última versión y envía un informe de error "
+"y tus comentarios \n"
+"desde la página web de stellarium : http://stellarium.sourceforge.net\n"
 "\n"
 
 #: src/stel_ui.cpp:673
@@ -242,17 +242,16 @@ msgstr "Información"
 #, fuzzy
 msgid ""
 "Movement & selection:\n"
-"\t                            Arrow Keys       : Change viewing RA/DE\n"
-"\t                            Page Up/Down     : Zoom\n"
-"\t                            CTRL+Up/Down     : Zoom\n"
-"\t                            Left Click       : Select object\n"
-"\t                            Right Click      : Unselect\n"
-"\t                            CTRL+Left Click  : Unselect\n"
-"\t                            \\                : Zoom out (planet + moons "
-"if applicable)\n"
-"\t                            /                : Zoom to selected object\n"
-"\t                            SPACE            : Center on selected object\n"
-"\t                            \n"
+"Arrow Keys       : Change viewing RA/DE\n"
+"Page Up/Down     : Zoom\n"
+"CTRL+Up/Down     : Zoom\n"
+"Left Click       : Select object\n"
+"Right Click      : Unselect\n"
+"CTRL+Left Click  : Unselect\n"
+"\\                : Zoom out (planet + moons if applicable)\n"
+"/                : Zoom to selected object\n"
+"SPACE            : Center on selected object\n"
+"\n"
 msgstr ""
 "Movimientos y selecciones:\n"
 "Teclas de flecha : Cambiar vista AR/DEC\n"
@@ -270,22 +269,17 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Display options:\n"
-"\t                            ENTER : Equatorial/altazimuthal mount\n"
-"\t                            F1  : Toggle fullscreen if possible.\n"
-"\t                            C   : Constellation lines       V   : "
-"Constellation labels\n"
-"\t                            R   : Constellation art         E   : "
-"Equatorial grid\n"
-"\t                            Z   : Azimuthal grid            N   : Nebula "
-"labels\n"
-"\t                            P   : Planet labels             G   : Ground\n"
-"\t                            A   : Atmosphere                F   : Fog\n"
-"\t                            Q   : Cardinal points           O   : Toggle "
-"moon scaling\n"
-"\t                            T   : Object tracking           S   : Stars\n"
-"\t                            4 , : Ecliptic line             5 . : Equator "
-"line\n"
-"\t                            \n"
+"ENTER : Equatorial/altazimuthal mount\n"
+"F1  : Toggle fullscreen if possible.\n"
+"C   : Constellation lines       V   : Constellation labels\n"
+"R   : Constellation art         E   : Equatorial grid\n"
+"Z   : Azimuthal grid            N   : Nebula labels\n"
+"P   : Planet labels             G   : Ground\n"
+"A   : Atmosphere                F   : Fog\n"
+"Q   : Cardinal points           O   : Toggle moon scaling\n"
+"T   : Object tracking           S   : Stars\n"
+"4 , : Ecliptic line             5 . : Equator line\n"
+"\n"
 msgstr ""
 "Opciones de despliegue:\n"
 "ENTER : Montura Ecuatorial/altacimutal\n"
@@ -304,14 +298,12 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Dialogs & other controls:\n"
-"\t                            H   : Help                      I   : About "
-"Stellarium\n"
-"\t                            M   : Text menu                 1 (one)  : "
-"Configuration\n"
-"\t                            CTRL + S : Take a screenshot\n"
-"\t                            CTRL + R : Toggle script recording\n"
-"\t                            CTRL + F : Toggle object finder\n"
-"\t                            \n"
+"H   : Help                      I   : About Stellarium\n"
+"M   : Text menu                 1 (one)  : Configuration\n"
+"CTRL + S : Take a screenshot\n"
+"CTRL + R : Toggle script recording\n"
+"CTRL + F : Toggle object finder\n"
+"\n"
 msgstr ""
 "Diálogos y otros controles:\n"
 "H : Ayuda I : Acerca de Stellarium\n"
@@ -325,17 +317,12 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Time & Date:\n"
-"\t                            6   : Time rate pause           7   : Time "
-"rate 0\n"
-"\t                            8   : Set current time          J   : Decrease "
-"time rate\n"
-"\t                            K   : Normal time rate          L   : Increase "
-"time rate\n"
-"\t                            -   : Back 24 hours             =   : Forward "
-"24 hours\n"
-"\t                            [   : Back 7 days               ]   : Forward "
-"7 days\n"
-"\t                            \n"
+"6   : Time rate pause           7   : Time rate 0\n"
+"8   : Set current time          J   : Decrease time rate\n"
+"K   : Normal time rate          L   : Increase time rate\n"
+"-   : Back 24 hours             =   : Forward 24 hours\n"
+"[   : Back 7 days               ]   : Forward 7 days\n"
+"\n"
 msgstr ""
 "Hora y fecha:\n"
 "6 : Pausa 7 : Rapidez del tiempo a 0↵\n"
@@ -349,10 +336,9 @@ msgstr ""
 #, fuzzy
 msgid ""
 "During Script Playback:\n"
-"\t                            CTRL + C : End Script\n"
-"\t                            6   : pause script              K   : resume "
-"script\n"
-"\t                            \n"
+"CTRL + C : End Script\n"
+"6   : pause script              K   : resume script\n"
+"\n"
 msgstr ""
 "Durante la Ejecución del Sripct:\n"
 "CTRL + C : Termina el Script\n"
@@ -363,7 +349,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Misc:\n"
-"\t                            9   : Toggle meteor shower rates\n"
+"9   : Toggle meteor shower rates\n"
 msgstr ""
 "Misc:\n"
 "9 : Cambiar frecuencia de lluvia de meteoros\n"
@@ -1298,6 +1284,17 @@ msgstr "Virgo"
 msgid "Vela"
 msgstr "Vela"
 
+#, fuzzy
+#~ msgid ""
+#~ "   Please check for newer versions and send bug reports\n"
+#~ "\t                                   and comments to us at: http://www."
+#~ "stellarium.org\n"
+#~ "\n"
+#~ msgstr ""
+#~ "   Revisa por nuevas versiones y envíanos reportes de errores\n"
+#~ "y comentarios a: http://www.stellarium.org\n"
+#~ "\n"
+
 #~ msgid "ly"
 #~ msgstr "al"
 
@@ -1330,17 +1327,6 @@ msgstr "Vela"
 
 #~ msgid "Loading Cadwell catalog:"
 #~ msgstr "Cargando Catálogo Caldwell:"
-
-#, fuzzy
-#~ msgid ""
-#~ "   Please check for newer versions and send bug reports\n"
-#~ "and comments to us at: http://stellarium.sourceforge.net\n"
-#~ "\n"
-#~ msgstr ""
-#~ "Por favor comprueba si tienes la última versión y envía un informe de "
-#~ "error y tus comentarios \n"
-#~ "desde la página web de stellarium : http://stellarium.sourceforge.net\n"
-#~ "\n"
 
 #~ msgid " Current Time :"
 #~ msgstr " Hora-Fecha actual :"
